--- a/assignment-1.html
+++ b/assignment-1.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-    <p class="paragraph">JOIN BUCKET</p>
-    <div class="rotate-45">
-        <p>HTML & CSS</p>
-        <p>design and build websites</p>
+    <div class="container">
+        <p>Join Bucket</p>
+        <div class="rotate-45">
+            <p>HTML & CSS</p>
+            <p>design and build websites</p>
+        </div>
     </div>
 </body>
 
